[package]
name = "ddpg_robot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = {version = "*", registry = "kellnr"}
worldgen_unwrap = {version = "*", registry = "kellnr"}
ghost_journey_journal = { version="0.1.1", registry = "kellnr" }
clap = { version = "4.4.12", features = ["derive"] }
plotters = "0.3.5"
rand = "0.8.5"
torch-sys = {path = "../../../Libs/Rust/tch-rs/torch-sys"}
tch = {path = "../../../Libs/Rust/tch-rs"}
